assets/sass/_zen.scss
// Zen custom styles

// DFD custom styles

.presentation-pdf {
  margin-left: auto;
  margin-right: auto;
}

.resume-pdf,
.poster-pdf {
  margin-left: auto;
  margin-right: auto;
}

.resume-pdf-iframe,
.poster-pdf-iframe {
  height: calc(1.4 * (100% - 1rem));
  max-width: 100%;
  min-height: 490px;
  min-width: 360px;
  width: 100%;
}

.presentation-pdf-iframe {
  height: calc(.9 * (100% - 1rem));
  max-width: 100%;
  min-height: 240px;
  min-width: 360px;
  width: 100%;
}

@media screen and (min-width: 48rem) {
  .resume-pdf-iframe,
  .poster-pdf-iframe {
    height: calc(1.34 * 26rem);
  }

  .presentation-pdf-iframe {
    height: calc(.85 * 26rem);
  }
}

@media screen and (min-width: 84rem) {
  .resume-pdf-iframe,
  .poster-pdf-iframe {
    height: calc(1.1 * 40rem);
  }

  .presentation-pdf-iframe {
    height: calc(.66 * 40rem);
  }
}

.image.about-photo {
  display: block;
  float: left;
  margin-bottom: 1rem;
  margin-right: 1rem;
  margin-top: 0;
}

.image.side-by {
  display: inline-block;
  margin-bottom: 1rem;
  margin-right: 1rem;
  margin-top: .4em;
  max-width: 49%;
  vertical-align: middle;

  ~ p {
    display: inline-block;
    max-width: 49%;
  }
}

li > p {
  margin-bottom: 0;
  margin-top: 0;
}

.main .introduction-card {
  align-self: flex-start;
  flex: 1 1 45%;
  margin-bottom: 1rem;
}

.main .introduction-card a,
.main .about-photo a {
  display: block;
  height: 100%;
  margin: 0;
  padding: 0;
  width: 100%;
}

.main .introduction-card img,
.main .about-photo img {
  border: 1px solid var(--color-brand);
  display: block;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  width: 100%;
}

.main .about-photo {
  flex: 1 1 45%;
  display: block;
  margin-bottom: 1rem;
}

.two-image-wrapper {
  align-content: flex-start;
  display: flex;
  flex-flow: column nowrap;
  justify-content: space-between;
  height: max-content;
  width: 100%;
  overflow: hidden;
}

@media screen and (min-width: 48em) {
  .two-image-wrapper {
    align-content: space-between;
    flex-flow: row nowrap;
    justify-content: flex-start;
  }

  .main .about-photo {
    margin-right: 1rem;
  }
}

@media screen and (min-width: 48em) {
  .two-image-wrapper {
    align-content: space-between;
    flex-flow: row nowrap;
    justify-content: flex-start;
  }

  .main .about-photo {
    margin-right: 1rem;
  }
}

.main .content li sup a {
  min-height: unset;
  min-width: unset;
}

.main .content li a {
  display: inline-block;
  min-height: 40px;
  min-width: 40px;
}

.side-by-figure.image {
  display: inline-block;
  vertical-align: top;
  width: 45%;
}

.side-by-figure.image a {
  display: block;
  height: 100%;
  width: 100%;
}

.side-by-figure.image img {
  height: auto;
  width: 100%;
}

.image.half-width {
  width: 50%;
}

.image.three-quarter-width {
  width: 75%;
}

.header .header {
  &__brand {
    max-width: 75%;
  }
}

article .highlight .chroma {
  background-color: var(--color-code-bg);
}

// Page

body {
  background-color: var(--color-backdrop);
}

.page {
  background-color: var(--color-body-bg);
}

.footer {
  border-top: 2px solid var(--color-border);
}

// Apply smaller text to blocks, footer etc.

th,
label,
legend,
figcaption {
  font-size: var(--fs-s);
}

.language-selector,
.footer {
  font-size: var(--fs-xs);
}

// Apply heading font stack and colour to labels etc.

th,
nav,
label,
legend,
.header,
.footer {
  color: var(--color-headings);
  font-family: var(--ff-headings);
}

th,
label {
  font-weight: var(--fw-headings);
}

// Article and content.

article > .content,
aside {
  ul {
    @extend %ul-straight-left;
  }

  ol {
    @extend %ol-straight-left;
  }
}

article {
  .submitted,
  .tags {
    @include respond-to(s) {
      display: inline-block;
      padding-right: 1rem;
    }
  }

  code {
    font-size: var(--fs-xs);
    overflow-wrap: break-word;
  }

  pre {
    border-radius: var(--radius-xs);
    padding: 5px;
    border: 1px solid var(--color-border-light);
    background-color: var(--color-text-bg);
    overflow: auto;
    max-height: 300px;
    max-width: 90vw;

    &.chroma {
      max-height: initial;
      overflow-x: scroll;
    }

    & > code {
      display: inline-block;
      white-space: pre;
    }
  }
}

.content-dates {
  text-align: right;
}

// Figure and image.

figure,
img {
  &.image {
    @include respond-to(s) {
      &.center {
        margin-inline: auto;
      }

      &.left {
        padding: 0 .75rem .75rem 0;
        margin: 0;
        float: left;
        clear: both;
      }

      &.right {
        padding: 0 0 .75rem .75rem;
        margin: 0;
        float: right;
        clear: both;
      }
    }
  }
}

figure {
  &.image {
    figcaption {
      @include respond-to(s) {
        display: table-caption;
        caption-side: bottom;
      }

      p {
        margin: 0;
      }
    }

    @include respond-to(s) {
      display: table;

      img {
        display: block;
      }

      &.left {
        figcaption {
          padding: 0 .75rem .75rem 0;
        }
      }

      &.right {
        figcaption {
          padding: 0 0 .75rem .75rem;
        }
      }
    }
  }

  &.podcast {
    audio {
      width: 95%;
    }
  }
}

// Navigation

.main-menu {
  margin-top: .75rem;
  outline: 0;

  li {
    margin-bottom: .75rem;
    padding: 0;
  }

  a {
    display: block;
    background-color: var(--color-brand);
    color: var(--color-text-bg);
    padding: 2px 8px;
    text-decoration: none;

    &:hover,
    &:focus {
      background-color: var(--color-brand-dark);
    }

    &:active,
    &.active {
      background-color: var(--color-brand);
      text-decoration: underline;
    }
  }
}

.menu a.active {
  text-decoration: none;
}

// Search

.search-text {
  font-size: var(--fs-l);
  max-width: 80%;
}

// Form

.content {
  input,
  textarea {
    &:not(:placeholder-shown):valid {
      background-color: var(--color-status-bg);
    }

    &:not(:placeholder-shown):invalid {
      background-color: var(--color-error-bg);
    }
  }
}

.js-submitted {
  input,
  textarea {
    &:valid {
      background-color: var(--color-status-bg);
    }

    &:invalid {
      background-color: var(--color-error-bg);
    }
  }
}

.header {
  &__brand {
    display: flex;
    flex: 1 1 100%;
    max-width: 75%;
  }

  &__logo {
    display: block;
    margin-bottom: auto;
    margin-top: auto;
  }

  &__site-name {
    font-size: var(--fs-xl);
    line-height: 1;
    margin-left: 1rem;
  }

  &__site-link {
    &:link,
    &:visited {
      color: var(--color-text-bg);
    }
  }
}

.layout {
  &__header {
    color: var(--color-text-bg);
    padding-block: .7em;

    .header {
      &__logo,
      &__region {
        background-color: var(--color-header-bg);
        color: var(--color-text-bg);
      }

      &__region {
        background-color: var(--color-text-bg);
        color: var(--color-header-bg);
      }
    }
  }

  &__footer {
    color: var(--color-text-bg);

    p a {
      color: var(--color-brand-light);
    }
  }
}

.card {
  background-color: var(--color-backdrop);
}

.sidebar .menu {
  background-color: var(--color-brand-light);
  margin-bottom: 1rem;
  margin-top: 1rem;
  padding-bottom: .1rem;
  padding-left: var(--gutters);
  padding-right: var(--gutters);
  padding-top: .1rem;

  &:first-of-type {
    margin-top: 0;
  }

  &:last-of-type {
    margin-bottom: 0;
  }

  ul {
    list-style-position: inside;
    list-style-type: none;
    margin-left: 0;
    margin-top: 0;
    padding-left: 0;

    li {
      list-style-position: inside;
      list-style-type: none;
      padding-left: 0;

      &::before {
        content: '';
        padding-right: 0;
      }
    }
  }
}

.toc {
  background-color: var(--color-brand-light);
  padding-bottom: .1rem;
  padding-top: .1rem;

  nav {
    font-family: var(--ff-body);
  }
}

.content .sitemap-view {
  ul {
    display: block;
    width: 100%;

    li {
      margin-left: 0;

      &::before {
        content: '';
      }

      > a {
        display: block;
        text-decoration: none;

        &:active,
        &:hover {
          background-color: var(--color-link-hover);
          color: var(--color-text-bg);
        }
      }
    }
  }

  > ul > li > a {
    background-color: var(--color-backdrop);
    border-style: solid;
    border-width: 1px;
    margin-bottom: .8rem;
    margin-top: .2rem;
    padding-bottom: .2rem;
    padding-left: 1rem;
    padding-right: 1rem;
    padding-top: .3rem;
  }
}

blockquote {
  border-left: solid 4px;
  padding-left: 1rem;
  padding-right: 1em;

  p {
    margin-bottom: 0;

    ~ p {
      margin-top: 1em;
    }
  }
}

code,
pre {
  tab-size: 3;
}

pre,
pre code {
  overflow-wrap: break-word;
  word-break: break-all;
}

pre,
.pre {
  white-space: pre-wrap;
}

pre code {
  display: block;
  line-height: 2;
  white-space: pre-wrap;
}

.main .highlight > .chroma > code {
  white-space: pre-wrap;
}

.main .highlight > .chroma > code > span {
  word-break: break-all;
  overflow-wrap: anywhere;
}

main table {
  border-collapse: collapse;
  margin-bottom: 1rem;
  width: 100%;
}

main table tr {
  th {
    background-color: var(--color-brand-light);
    border-bottom: 4px ridge;
    border-left: 4px ridge;
    border-top: 4px ridge;
    color: var(--color-headings);
    text-align: left;
    width: max-content;
  }
}

@supports (text-align: start) {
  main table tr th {
    text-align: start;
  }
}

main table tr th:last-of-type {
  border-right: 4px ridge;
}

main table tr td {
  border-bottom: 2px solid;
  border-left: 2px solid;
  width: max-content;
}

main table tr td:last-of-type {
  border-right: 2px solid;
  min-width: 50%;
}

main table tbody tr:nth-of-type(even) {
  background-color: var(--color-backdrop);
}

.content--endnote {
  border-top: 1px solid;
  margin-left: auto;
  padding: 1.5rem;
  width: fit-content;
}

// All HTML headings, `<h1>` through `<h6>`, are available. `%h1` through `%h6`
// classes are also available, for when you want to match the font styling of a
// heading but not be a heading.
h1,
%h1,
h2,
%h2,
h3,
%h3,
h4,
%h4,
h5,
%h5,
h6,
%h6 {
  @include margin-block(.5);
  color: var(--color-headings);
  font-family: var(--ff-headings);
  font-weight: var(--fw-headings);
  line-height: var(--heading-line-height);

  // Set max text line width in main for readability.
  .main & {
    max-width: var(--max-line-width);
  }
}

// Paragraphs that are titles (as in sidebar)

p.title {
  // Add vertical rhythm margins.
  @include margin-block(.5);
}

// Lists

dl,
ol,
ul,
menu {
  // Add vertical rhythm margins.
  @include margin-block(1 .75);
}

